--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,11 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
     <welcome-file-list>
+<!--        <welcome-file>-->
+<!--            index.jsp-->
+<!--        </welcome-file>-->
         <welcome-file>
-            index.jsp
+            login.jsp
         </welcome-file>
     </welcome-file-list>
      <servlet>
